// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Store Nodes added should add multiple nodes with unique names 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-1",
  "name": "kafka-transaction (copy 1)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add multiple nodes with unique names 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-3",
  "name": "kafka-transaction (copy 2)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add multiple nodes with unique names 3`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-4",
  "name": "filter (copy 2)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add nodes with edges 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-1",
  "name": "newNode",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add nodes with edges 2`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-2",
  "name": "kafka-transaction (copy 1)",
  "output": "output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add single node 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-2",
  "name": "Enricher ID",
  "output": "enricher_id_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;

exports[`Store Nodes added should add single node with unique name 1`] = `
{
  "additionalFields": {
    "layoutData": {
      "x": 10,
      "y": 20,
    },
  },
  "id": "uuid-1",
  "name": "kafka-transaction 1",
  "output": "kafka_transaction_1_output",
  "service": {
    "id": "paramService",
    "parameters": [
      {
        "expression": {
          "expression": "'3434'",
          "language": "spel",
        },
        "name": "param",
      },
    ],
  },
  "type": "Enricher",
}
`;
